tests/ui/macros/macro-name-typo.stderr
error: cannot find macro `printlx` in this scope
  --> $DIR/macro-name-typo.rs:2:5
   |
LL |     printlx!("oh noes!");
   |     ^^^^^^^
   |
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: similarly named macro `println` defined here
help: a macro with a similar name exists
   |
LL -     printlx!("oh noes!");
LL +     println!("oh noes!");
   |

error: aborting due to 1 previous error

